--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "chai": "4.1.2",
     "express": "4.16.2",
-    "mocha": "4.0.1"
+    "mocha": "4.0.1",
+    "pug": "2.0.0-rc.4"
   }
 }
